k3s/pihole/ingressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web
  namespace: pihole
  annotations:
    spec.ingressClassName: "traefik"
spec:
  rules:
  - host: pihole.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web
            port:
              number: 80
